Add Restaurant, FoodItem and Menu Entities, Add Python scrtipt to populate db from excel file

--- a/src/main/resources/application-default.properties
+++ b/src/main/resources/application-default.properties
@@ -6,6 +6,7 @@ spring.datasource.password=1234
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
+# Automatically create/update tables based on entities
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
